<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/profile_user_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="30dp"
        android:scaleType="centerCrop"
        app:riv_corner_radius="30dp"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_nick_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/comforta_bold"
        android:text="@string/yo_nickname_label"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/profile_user_avatar"
        app:layout_constraintTop_toTopOf="@id/profile_user_avatar" />

    <EditText
        android:id="@+id/profile_nick_name_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comforta_bold"
        android:text="@string/def_nick_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/profile_nick_label"
        app:layout_constraintTop_toBottomOf="@id/profile_nick_label"
        tools:ignore="Autofill,LabelFor"
        android:inputType="textPersonName" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card_advices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="#333333"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/profile_user_avatar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profile_one_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comforta_medium"
                android:gravity="center"
                android:text="@string/one_sovet"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_two_info" />

            <TextView
                android:id="@+id/profile_two_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/comforta_medium"
                android:gravity="center"
                android:text="@string/second_info"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card_dop_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="#333333"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/profile_card_advices">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profile_mail_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_mail_label"
                android:fontFamily="@font/comforta_regular"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/profile_email_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comforta_medium"
                android:gravity="center"
                android:text="@string/def_email"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_mail_label" />

            <TextView
                android:id="@+id/profile_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/profile_email_info"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="18sp"
                android:text="@string/yo_id_label"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/comforta_regular"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/profile_id_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/comforta_medium"
                android:gravity="center"
                android:text="@string/def_id"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_id_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/profile_btn_apply_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/back_btn"
        android:fontFamily="@font/comforta_bold"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/apply_changes_label"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_btn_log_out"
        app:layout_constraintEnd_toEndOf="@id/profile_nick_name_et"
        app:layout_constraintStart_toStartOf="@id/profile_user_avatar"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/profile_btn_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back_btn"
        android:fontFamily="@font/comforta_bold"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/log_out_label"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/profile_card_dop_info"
        app:layout_constraintEnd_toEndOf="@id/profile_nick_name_et"
        app:layout_constraintStart_toStartOf="@id/profile_user_avatar"
        tools:ignore="RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>