<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CreateGroupFragment">

    <ImageView
        android:id="@+id/done_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_done" />

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_close" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/create_group_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close_btn"
        android:layout_margin="30dp" />

    <EditText
        android:id="@+id/create_group_name_et"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@id/create_group_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/create_group_avatar"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="#333333"
        android:hint="@string/enter_group_name_hint"
        android:fontFamily="@font/comforta_bold"
        android:textSize="18sp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/create_group_description_et"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@id/create_group_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_group_name_et"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:textColor="#333333"
        android:hint="@string/enter_group_desc_hint"
        android:fontFamily="@font/comforta_bold"
        android:textSize="18sp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/create_group_desc_how"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_label"
        android:fontFamily="@font/comforta_medium"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/create_group_description_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textColor="#333333"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/create_group_desc_how_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_label_2"
        android:fontFamily="@font/comforta_medium"
        android:textSize="16sp"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/create_group_desc_how"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textColor="#333333"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/create_group_desc_how_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_label_3"
        android:fontFamily="@font/comforta_medium"
        android:textSize="16sp"
        android:layout_margin="40dp"
        app:layout_constraintTop_toBottomOf="@id/create_group_desc_how_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textColor="#333333"
        android:layout_marginTop="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>